--- a/ExtraMessenger/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExtraMessenger/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -5,7 +5,7 @@
     <a class="navbar-brand" [routerLink]="['/']"><img src="../../assets/logo.png" class="img-fluid" /></a>
     <div class="container">
       <button
-        class="navbar-toggler"
+        class="navbar-toggler custom-toggler"
         type="button"
         data-toggle="collapse"
         data-target=".navbar-collapse"
@@ -13,7 +13,7 @@
         [attr.aria-expanded]="isExpanded"
         (click)="toggle()"
       >
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon navbar-light"></span>
       </button>
       <div
         class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
