--- a/ExtraMessenger/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExtraMessenger/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -32,8 +32,8 @@
               >Login</button
             >
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <button class="btn btn-outline-success strong" [routerLink]="['/fetch-data']"
+          <li class="nav-item">
+            <button class="btn btn-outline-success strong" (click)="openRegisterDialog()"
               >Register</button
             >
           </li>
