--- a/ExtraMessenger/ClientApp/src/app/chat/chat.component.css
+++ b/ExtraMessenger/ClientApp/src/app/chat/chat.component.css
@@ -1,7 +1,8 @@
 .main-chat {
-    margin-top: 65px;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    padding-bottom: 70px;
+  margin-top: 62px;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 70px;
+  background-color: #242526;
 }
