--- a/ExtraMessenger/ClientApp/src/app/chat/chat.component.html
+++ b/ExtraMessenger/ClientApp/src/app/chat/chat.component.html
@@ -1,4 +1,5 @@
 <div class="main-chat">
-    <app-sidebar style="width: 20%; margin-right: 1px;"></app-sidebar>
-    <app-message-segment style="width: 80%;"></app-message-segment>
+  <app-sidebar style="width: 20%; margin-right: 1px;"></app-sidebar>
+  <mat-divider [vertical]="true"></mat-divider>
+  <app-message-segment style="width: 80%;"></app-message-segment>
 </div>
