--- a/ExtraMessenger/ClientApp/src/app/chat/message-segment/message-segment.component.html
+++ b/ExtraMessenger/ClientApp/src/app/chat/message-segment/message-segment.component.html
@@ -1,4 +1,4 @@
-<div class="message-thread shadow-sm p-3 mb-3 bg-white rounded h-100 d-flex flex-column-reverse">
+<div class="message-thread shadow-sm p-3 mb-3 rounded h-100 d-flex flex-column-reverse">
     <ng-container *ngIf="(messages$ | async) as messages">
         <div style="overflow: scroll; overflow-x: hidden; max-height: 630px;" class="d-flex flex-column-reverse">
             <div *ngFor="let message of messages" class="m-3">
