--- a/ExtraMessenger/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExtraMessenger/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -40,6 +40,11 @@
               Chat
             </button>
           </li>
+          <li class="nav-item mr-2" *ngIf="_authService.loggedIn()">
+            <button class="btn btn-outline-success strong" (click)="navigateUsers()">
+              Explore Users
+            </button>
+          </li>
           <li class="nav-item" *ngIf="_authService.loggedIn()">
             <button class="btn btn-outline-success strong" (click)="logout()">
               Logout
