--- a/ExtraMessenger/ClientApp/src/styles.css
+++ b/ExtraMessenger/ClientApp/src/styles.css
@@ -16,5 +16,5 @@ code {
   border-color: #1861ac;
 }
 
-html, body { height: 100%; overflow-y: hidden; }
+html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
