--- a/ExtraMessenger/ClientApp/src/app/chat/users/users.component.html
+++ b/ExtraMessenger/ClientApp/src/app/chat/users/users.component.html
@@ -8,7 +8,7 @@
         </mat-card-header>
         <img mat-card-image width="500px" height="200px;" [src]="user.image" alt="User Photo">
         <mat-card-actions>
-            <button color="primary" mat-raised-button (click)="openChatModal(user.username)">CHAT</button>
+            <button color="primary" mat-raised-button (click)="openChatModal(user.objectId)">CHAT</button>
         </mat-card-actions>
     </mat-card>
 </div>
