--- a/ExtraMessenger/ClientApp/src/app/chat/sidebar/sidebar.component.html
+++ b/ExtraMessenger/ClientApp/src/app/chat/sidebar/sidebar.component.html
@@ -4,10 +4,12 @@
     <ng-container *ngIf="(contacts$ | async) as contacts">
         <div style="overflow: scroll; overflow-x: hidden; max-height: 630px;">
             <div *ngFor="let contact of contacts">
-                <div (click)="openThread(contact.chatInteractionReference, contact.otherUserId)" class="contact row mb-2 ml-3 mr-3 shadow-sm p-1 rounded border border-primary">
+                <div (click)="openThread(contact.chatInteractionReference, contact.otherUserId)"
+                     class="row mb-2 ml-3 mr-3 shadow-sm p-1 rounded border border-primary"
+                     [ngClass]="(clickedContact === contact.chatInteractionReference)? 'selected-contact' : 'contact'">
                     <img class="chatUser-image ml-1" style="margin-top: 1px;"
                         src="{{contact.mainPhotoUrl ? contact.mainPhotoUrl : '../../../assets/images/default-profile-image.jpg'}}">
-                    <div class="ml-2 mt-3 text-warning"> <strong> {{ contact.name | titlecase }} </strong> </div>
+                    <div class="ml-2 mt-3 text-purple"> <strong> {{ contact.name | titlecase }} </strong> </div>
                 </div>
             </div>
         </div>
