--- a/ExtraMessenger/ClientApp/src/styles.css
+++ b/ExtraMessenger/ClientApp/src/styles.css
@@ -17,4 +17,8 @@ code {
 }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #242526;
+}
