--- a/ExtraMessenger/ClientApp/src/app/chat/chat/chat.component.html
+++ b/ExtraMessenger/ClientApp/src/app/chat/chat/chat.component.html
@@ -1,5 +1,15 @@
 <div class="main-chat">
-  <app-sidebar style="width: 20%; margin-right: 1px;"></app-sidebar>
-  <mat-divider [vertical]="true"></mat-divider>
-  <app-message-segment style="width: 80%;"></app-message-segment>
+  <app-sidebar id="collapseExample" [ngClass]="{'collapse': collapse, 'contactsSidebar': true}" style=" margin-right: 1px;"></app-sidebar>
+  <div style="width: 2%">
+    <div class="centerDiv">
+      <button (click)="toggle()" mat-mini-fab  data-bs-toggle="collapse" data-bs-target="collapseExample" aria-expanded="true" aria-controls="collapseExample" aria-label="Example icon button with a menu icon">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </div>
+  </div>
+  <mat-divider [vertical]="true">
+
+  </mat-divider>
+
+  <app-message-segment class="remaining"></app-message-segment><!--style="width: 70%;"-->!>
 </div>
