--- a/ExtraMessenger/ClientApp/src/app/login/login.component.html
+++ b/ExtraMessenger/ClientApp/src/app/login/login.component.html
@@ -1,6 +1,6 @@
-<form [formGroup]="loginForm" (ngSubmit)="login()">
-  <div class="mt-3">
-    <div class="row">
+<form [formGroup]="loginForm" style="overflow:hidden" (ngSubmit)="login()">
+  <div class="mt-3" style="overflow:hidden">
+    <div class="row" style="overflow:hidden">
       <mat-form-field color="accent" appearance="outline" class="w-75 ml-auto mr-auto">
         <mat-label>Username</mat-label>
         <input matInput placeholder="Enter your username" formControlName="username">
