--- a/ExtraMessenger/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExtraMessenger/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -45,6 +45,12 @@
               Explore Users
             </button>
           </li>
+          
+          <li class="nav-item mr-2" *ngIf="_authService.loggedIn()">
+            <button class="btn btn-outline-success strong" (click)="navigateRepoFetch()">
+              Fetch My Repos
+            </button>
+          </li>
           <li class="nav-item" *ngIf="_authService.loggedIn()">
             <button class="btn btn-outline-success strong" (click)="logout()">
               Logout
