Fixed errors on front, bug with post Bearer

--- a/ExtraMessenger/ClientApp/src/app/repo/fetchrepos/fetchrepos.component.html
+++ b/ExtraMessenger/ClientApp/src/app/repo/fetchrepos/fetchrepos.component.html
@@ -1,1 +1,3 @@
-<button color="success" mat-raised-button (click)="fetchrepos()">Fetch</button>
+<div class="main-container">
+  <button color="secondary" mat-raised-button (click)="fetchrepos()">Fetch</button>
+</div>
