--- a/ExtraMessenger/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExtraMessenger/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -47,8 +47,8 @@
           </li>
           
           <li class="nav-item mr-2" *ngIf="_authService.loggedIn()">
-            <button class="btn btn-outline-success strong" (click)="navigateRepoFetch()">
-              Fetch My Repos
+            <button class="btn btn-outline-success strong" (click)="navigateRepoComponent()">
+              Repos App
             </button>
           </li>
           <li class="nav-item" *ngIf="_authService.loggedIn()">
