Added FethEvents method

--- a/ExtraMessenger/ClientApp/src/app/repo/fetchrepos/fetchrepos.component.html
+++ b/ExtraMessenger/ClientApp/src/app/repo/fetchrepos/fetchrepos.component.html
@@ -19,7 +19,7 @@
         Open issues: {{repo.openIssues}}
       </mat-card-content>
       <mat-card-actions>
-        <button color="primary" mat-raised-button (click)="openChatModal(repo.id)">Fetch/Sync Issues</button>
+        <button color="primary" mat-raised-button (click)="fetchRepoInfo(repo.id)">Fetch/Sync Issues</button>
       </mat-card-actions>
     </mat-card>
   </div>
@@ -40,7 +40,7 @@
         Open issues: {{repo.openIssues}}
       </mat-card-content>
       <mat-card-actions>
-        <button color="primary" mat-raised-button (click)="openChatModal(repo.id)">Fetch/Sync Issues</button>
+        <button color="primary" mat-raised-button (click)="fetchRepoInfo(repo.id)">Fetch/Sync Issues</button>
       </mat-card-actions>
     </mat-card>
   </div>
