--- a/ExtraMessenger/ClientApp/src/app/repo/tutorialdetails/tutorialdetails.component.html
+++ b/ExtraMessenger/ClientApp/src/app/repo/tutorialdetails/tutorialdetails.component.html
@@ -4,7 +4,7 @@
   <div class="content-container">
     <h2>{{tutorial.title}}</h2>
     <mat-list>
-      <mat-list-item> <span style="color: white; margin-left: 20px;">Topic: {{tutorial.topic[0]}}</span> </mat-list-item>
+      <mat-list-item> <span style="color: white; margin-left: 20px;">Topic: {{tutorial.topics[0]}}</span> </mat-list-item>
       <mat-list-item> <span style="color: white; margin-left: 20px;">Difficulty: {{tutorial.difficulty}}</span> </mat-list-item>
       <mat-list-item>
         <button mat-icon-button color="accent" (click)="upvote()">
