--- a/ExtraMessenger/ClientApp/src/app/repo/issuestatistics/issuestatistics.component.html
+++ b/ExtraMessenger/ClientApp/src/app/repo/issuestatistics/issuestatistics.component.html
@@ -1,10 +1,13 @@
 <div class="main-container">
   <app-reposidebar></app-reposidebar>
-  
+
   <div style="background-color: white; overflow-x: scroll">
     <!-- style="color:white"  -->
 
-    <h1>Languages work/love</h1>
+    <h1>Open/closed/reopened issues</h1>
+    <canvas #pieCanvas style="height:25em; width:30em;color:white"></canvas>
+    <hr color="#242526">
+    <h1>Issue state</h1>
     <canvas #barCanvas style="height:25em; width:30em;color:white"></canvas>
     <hr color="#242526">
   </div>
