--- a/ExtraMessenger/ClientApp/src/app/repo/profile/profile.component.html
+++ b/ExtraMessenger/ClientApp/src/app/repo/profile/profile.component.html
@@ -27,7 +27,7 @@
     </div>
     <br>
     <div>
-      <mat-card *ngFor="let t of (_tutorials | async) as tArray" class="example-card">
+      <mat-card *ngFor="let t of (_Tickets | async) as tArray" class="example-card">
         <mat-card-header>
           <mat-card-title>{{t.title | titlecase}}</mat-card-title>
           <mat-card-subtitle>
