--- a/ExtraMessenger/ClientApp/src/app/repo/reposidebar/reposidebar.component.html
+++ b/ExtraMessenger/ClientApp/src/app/repo/reposidebar/reposidebar.component.html
@@ -23,24 +23,24 @@
           <strong> Fetch repos </strong>
         </div>
       </div>
-      <div (click)="navigateCreateTutorial()"
+      <div (click)="navigateCreateTicket()"
            class="row mb-2 ml-3 mr-3 shadow-sm p-1 rounded border border-primary contact">
         <div class="ml-2 mt-3 text-purple">
 
           <span class="material-icons" style="color: white; margin-left: 20px;">
             add
           </span>
-          <strong> Create tutorial </strong>
+          <strong> Create Ticket </strong>
         </div>
       </div>
-      <div (click)="navigateExloreTutorial()"
+      <div (click)="navigateExloreTicket()"
            class="row mb-2 ml-3 mr-3 shadow-sm p-1 rounded border border-primary contact">
         <div class="ml-2 mt-3 text-purple">
 
           <span class="material-icons" style="color: white; margin-left: 20px;">
             explore
           </span>
-          <strong> Explore tutorials </strong>
+          <strong> Explore Tickets </strong>
         </div>
       </div>
       <div (click)="navigateStatistics()"
