--- a/ExtraMessenger/ClientApp/src/app/repo/ticketdetails/ticketdetails.component.html
+++ b/ExtraMessenger/ClientApp/src/app/repo/ticketdetails/ticketdetails.component.html
@@ -2,27 +2,27 @@
   <app-reposidebar></app-reposidebar>
   <mat-divider [vertical]="true"></mat-divider>
   <div class="content-container">
-    <h1 style="color: white;">{{tutorial.title | titlecase}}</h1>
-    <i style="color: white; margin-left: 10px;">by {{tutorial.owner}}</i>
+    <h1 style="color: white;">{{Ticket.title | titlecase}}</h1>
+    <i style="color: white; margin-left: 10px;">by {{Ticket.owner}}</i>
     <mat-divider ></mat-divider>
     <mat-list>
-      <mat-list-item><strong style="color: white; margin-left: 20px;">Topic:</strong> <span style="color: white; margin-left: 20px;"> {{tutorialTopic}}</span> </mat-list-item>
-      <mat-list-item><strong style="color: white; margin-left: 20px;">Difficulty:</strong> <span style="color: white; margin-left: 20px;">{{tutorial.difficulty}}</span> </mat-list-item>
+      <mat-list-item><strong style="color: white; margin-left: 20px;">Topic:</strong> <span style="color: white; margin-left: 20px;"> {{TicketTopic}}</span> </mat-list-item>
+      <mat-list-item><strong style="color: white; margin-left: 20px;">Difficulty:</strong> <span style="color: white; margin-left: 20px;">{{Ticket.difficulty}}</span> </mat-list-item>
       <mat-list-item>
         <button mat-icon-button color="accent" (click)="upvote()" [disabled]="_isUp || _isDown">
           <mat-icon>thumb_up_alt</mat-icon>
         </button>
-        <span style="color: white; margin-left: 5px;">{{tutorial.upvotes}}</span>
+        <span style="color: white; margin-left: 5px;">{{Ticket.upvotes}}</span>
       </mat-list-item>
       <mat-list-item>
         <button mat-icon-button color="accent" (click)="downvote()" [disabled]="_isUp || _isDown">
           <mat-icon>thumb_down_alt</mat-icon>
         </button>
-        <span style="color: white; margin-left: 5px;">{{tutorial.downvotes}}</span>
+        <span style="color: white; margin-left: 5px;">{{Ticket.downvotes}}</span>
       </mat-list-item>
     </mat-list>
     <h2 style="color: white;">Introduction</h2>
-    <p style="color: white;">{{tutorial.introduction}}</p>
+    <p style="color: white;">{{Ticket.introduction}}</p>
     <button mat-stroked-button color="accent" (click)="goToRepo()">Go to example</button>
   </div>
 </div>
